refactor: reorganize project

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,8 @@ exclude = [
 ]
 
 members = [
-    'node',
-	'rpc',
-	'primitives',
+    'node/*',
     'pallets/*',
-    'runtime',
 ]
 
 resolver = "2"
