--- a/node/runtime/Cargo.toml
+++ b/node/runtime/Cargo.toml
@@ -182,10 +182,9 @@ runtime-benchmarks = [
 	"pallet-session-benchmarking",
 	"frame-system-benchmarking",
 	"hex-literal",
-
     "pallet-nft/runtime-benchmarks",
     "pallet-nft-order/runtime-benchmarks",
-    # "pallet-storage/runtime-benchmarks",
+    "pallet-storage/runtime-benchmarks",
 ]
 try-runtime = [
 	"frame-executive/try-runtime",
