--- a/node/rpc/Cargo.toml
+++ b/node/rpc/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "nft360-rpc"
+name = "deer-rpc"
 version = "0.1.0"
 edition = "2018"
 
@@ -8,7 +8,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 jsonrpc-core = "15.1.0"
-node-primitives = { package = "nft360-primitives", version = "0.1.0", path = "../primitives" }
+node-primitives = { package = "deer-primitives", version = "0.1.0", path = "../primitives" }
 pallet-transaction-payment-rpc = { version = "3.0.0", path = "../../substrate/frame/transaction-payment/rpc/" }
 sc-client-api = { version = "3.0.0", path = "../../substrate/client/api" }
 sc-consensus-babe = { version = "0.9.0", path = "../../substrate/client/consensus/babe" }
