--- a/node/runtime/Cargo.toml
+++ b/node/runtime/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = 'nft360-runtime'
+name = 'deer-runtime'
 edition = '2018'
 version = '0.1.0'
 
@@ -17,7 +17,7 @@ sp-authority-discovery = { version = "3.0.0", default-features = false, path = "
 sp-consensus-babe = { version = "0.9.0", default-features = false, path = "../../substrate/primitives/consensus/babe" }
 sp-block-builder = { version = "3.0.0", path = "../../substrate/primitives/block-builder", default-features = false }
 sp-inherents = { version = "3.0.0", path = "../../substrate/primitives/inherents", default-features = false }
-node-primitives = { package = "nft360-primitives", version = "0.1.0", default-features = false, path = "../primitives" }
+node-primitives = { package = "deer-primitives", version = "0.1.0", default-features = false, path = "../primitives" }
 sp-offchain = { version = "3.0.0", path = "../../substrate/primitives/offchain", default-features = false }
 sp-core = { version = "3.0.0", path = "../../substrate/primitives/core", default-features = false }
 sp-std = { version = "3.0.0", path = "../../substrate/primitives/std", default-features = false }
