--- a/node/rpc/Cargo.toml
+++ b/node/rpc/Cargo.toml
@@ -2,6 +2,7 @@
 name = "deer-rpc"
 version = "0.1.0"
 edition = "2018"
+license = "Apache 2.0"
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
