--- a/node/runtime/Cargo.toml
+++ b/node/runtime/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = 'deer-runtime'
-edition = '2018'
-version = '0.1.0'
+name = "deer-runtime"
+edition = "2018"
+version = "0.1.0"
+license = "Apache 2.0"
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
