--- a/node/executor/Cargo.toml
+++ b/node/executor/Cargo.toml
@@ -1,43 +1,47 @@
 [package]
 name = "deer-executor"
 version = "0.1.0"
+description = "Official Rust implementation of the Deer protocol"
 edition = "2018"
 license = "Apache 2.0"
+homepage = "https://deernetwork.org"
+repository = "https://github.com/DeerNetwork/deer-node/"
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "2.0.0" }
-node-primitives = { package = "deer-primitives", version = "0.1.0", path = "../primitives" }
-node-runtime = { package = "deer-runtime", version = "0.1.0", path = "../runtime" }
-sc-executor = { version = "0.9.0", path = "../../substrate/client/executor" }
-sp-core = { version = "3.0.0", path = "../../substrate/primitives/core" }
-sp-keystore = { version = "0.9.0", path = "../../substrate/primitives/keystore" }
-sp-io = { version = "3.0.0", path = "../../substrate/primitives/io" }
-sp-state-machine = { version = "0.9.0", path = "../../substrate/primitives/state-machine" }
-sp-trie = { version = "3.0.0", path = "../../substrate/primitives/trie" }
+codec = { package = "parity-scale-codec", version = "2.2.0" }
+node-primitives = { package = "deer-primitives", path = "../primitives" }
+node-runtime = { package = "deer-runtime", path = "../runtime" }
+sc-executor = { path = "../../substrate/client/executor" }
+sp-core = { path = "../../substrate/primitives/core" }
+sp-keystore = { path = "../../substrate/primitives/keystore" }
+sp-io = { path = "../../substrate/primitives/io" }
+sp-state-machine = { path = "../../substrate/primitives/state-machine" }
+sp-trie = { path = "../../substrate/primitives/trie" }
 trie-root = "0.16.0"
-frame-benchmarking = { version = "3.1.0", path = "../../substrate/frame/benchmarking" }
+frame-benchmarking = { path = "../../substrate/frame/benchmarking" }
 
 [dev-dependencies]
 criterion = "0.3.0"
-frame-support = { version = "3.0.0", path = "../../substrate/frame/support" }
-frame-system = { version = "3.0.0", path = "../../substrate/frame/system" }
-pallet-balances = { version = "3.0.0", path = "../../substrate/frame/balances" }
-pallet-contracts = { version = "3.0.0", path = "../../substrate/frame/contracts" }
-pallet-grandpa = { version = "3.1.0", path = "../../substrate/frame/grandpa" }
-pallet-im-online = { version = "3.0.0", path = "../../substrate/frame/im-online" }
-pallet-indices = { version = "3.0.0", path = "../../substrate/frame/indices" }
-pallet-session = { version = "3.0.0", path = "../../substrate/frame/session" }
-pallet-timestamp = { version = "3.0.0", path = "../../substrate/frame/timestamp" }
-pallet-transaction-payment = { version = "3.0.0", path = "../../substrate/frame/transaction-payment" }
-pallet-treasury = { version = "3.0.0", path = "../../substrate/frame/treasury" }
-sp-application-crypto = { version = "3.0.0", path = "../../substrate/primitives/application-crypto" }
-sp-consensus-babe = { version = "0.9.0", path = "../../substrate/primitives/consensus/babe" }
-sp-runtime = { version = "3.0.0", path = "../../substrate/primitives/runtime" }
-sp-externalities = { version = "0.9.0", path = "../../substrate/primitives/externalities" }
-substrate-test-client = { version = "2.0.0", path = "../../substrate/test-utils/client" }
+frame-support = { path = "../../substrate/frame/support" }
+frame-system = { path = "../../substrate/frame/system" }
+
+pallet-balances = { path = "../../substrate/frame/balances" }
+pallet-contracts = { path = "../../substrate/frame/contracts" }
+pallet-grandpa = { path = "../../substrate/frame/grandpa" }
+pallet-im-online = { path = "../../substrate/frame/im-online" }
+pallet-indices = { path = "../../substrate/frame/indices" }
+pallet-session = { path = "../../substrate/frame/session" }
+pallet-timestamp = { path = "../../substrate/frame/timestamp" }
+pallet-transaction-payment = { path = "../../substrate/frame/transaction-payment" }
+pallet-treasury = { path = "../../substrate/frame/treasury" }
+sp-application-crypto = { path = "../../substrate/primitives/application-crypto" }
+sp-consensus-babe = { path = "../../substrate/primitives/consensus/babe" }
+sp-runtime = { path = "../../substrate/primitives/runtime" }
+sp-externalities = { path = "../../substrate/primitives/externalities" }
+substrate-test-client = { path = "../../substrate/test-utils/client" }
 wat = "1.0"
 futures = "0.3.9"
 
