--- a/node/primitives/Cargo.toml
+++ b/node/primitives/Cargo.toml
@@ -3,19 +3,21 @@ name = "deer-primitives"
 version = "0.1.0"
 edition = "2018"
 license = "Apache 2.0"
+homepage = "https://deernetwork.org"
+repository = "https://github.com/DeerNetwork/deer-node/"
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
-frame-system = { version = "3.0.0", default-features = false, path = "../../substrate/frame/system" }
-sp-application-crypto = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/application-crypto" }
-sp-core = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/core" }
-sp-runtime = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/runtime" }
+codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive"] }
+frame-system = { default-features = false, path = "../../substrate/frame/system" }
+sp-application-crypto = { default-features = false, path = "../../substrate/primitives/application-crypto" }
+sp-core = { default-features = false, path = "../../substrate/primitives/core" }
+sp-runtime = { default-features = false, path = "../../substrate/primitives/runtime" }
 
 [dev-dependencies]
-sp-serializer = { version = "3.0.0", path = "../../substrate/primitives/serializer" }
+sp-serializer = { path = "../../substrate/primitives/serializer" }
 pretty_assertions = "0.6.1"
 
 [features]
