--- a/pallets/nft-order/Cargo.toml
+++ b/pallets/nft-order/Cargo.toml
@@ -8,22 +8,21 @@ license = "Apache 2.0"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-codec = { version = '2.0.0', package = 'parity-scale-codec', features = ['derive'], default-features = false }
-sp-std = { version = '3.0.0', path = '../../substrate/primitives/std', default-features = false }
-sp-core = { version = '3.0.0', path = '../../substrate/primitives/core', default-features = false }
-sp-runtime = { version = '3.0.0', path = '../../substrate/primitives/runtime', default-features = false }
-frame-benchmarking = { version = '3.1.0', path = '../../substrate/frame/benchmarking', default-features = false, optional = true }
-frame-support = { version = '3.0.0', path = '../../substrate/frame/support', default-features = false }
-frame-system = { version = '3.0.0', path = '../../substrate/frame/system', default-features = false }
-max-encoded-len = { version = "3.0.0", path = '../../substrate/max-encoded-len', default-features = false, features = [ "derive" ] }
+codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive", "max-encoded-len"] }
+sp-std = { path = "../../substrate/primitives/std", default-features = false }
+sp-core = { path = "../../substrate/primitives/core", default-features = false }
+sp-runtime = { path = "../../substrate/primitives/runtime", default-features = false }
+frame-benchmarking = { path = "../../substrate/frame/benchmarking", default-features = false, optional = true }
+frame-support = { path = "../../substrate/frame/support", default-features = false }
+frame-system = { path = "../../substrate/frame/system", default-features = false }
 
-pallet-nft = { version = '0.1.0', path = '../nft', default-features = false }
+pallet-nft = { path = "../nft", default-features = false }
 
 [dev-dependencies]
-sp-std = { version = '3.0.0', path = '../../substrate/primitives/std' }
-sp-io = { version = '3.0.0', path = '../../substrate/primitives/io' }
-sp-runtime = { version = '3.0.0', path = '../../substrate/primitives/runtime' }
-pallet-balances = { version = '3.0.0', path = '../../substrate/frame/balances' }
+sp-std = { path = "../../substrate/primitives/std" }
+sp-io = { path = "../../substrate/primitives/io" }
+sp-runtime = { path = "../../substrate/primitives/runtime" }
+pallet-balances = { path = "../../substrate/frame/balances" }
 
 [features]
 default = ["std"]
