--- a/pallets/nft/Cargo.toml
+++ b/pallets/nft/Cargo.toml
@@ -8,19 +8,19 @@ license = "Apache 2.0"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
-sp-std = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/std" }
-sp-core = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/core" }
-sp-runtime = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/runtime" }
-frame-support = { version = "3.0.0", default-features = false, path = "../../substrate/frame/support" }
-frame-system = { version = "3.0.0", default-features = false, path = "../../substrate/frame/system" }
-frame-benchmarking = { version = '3.1.0', path = '../../substrate/frame/benchmarking', default-features = false, optional = true }
+codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false }
+sp-std = { default-features = false, path = "../../substrate/primitives/std" }
+sp-core = { default-features = false, path = "../../substrate/primitives/core" }
+sp-runtime = { default-features = false, path = "../../substrate/primitives/runtime" }
+frame-support = { default-features = false, path = "../../substrate/frame/support" }
+frame-system = { default-features = false, path = "../../substrate/frame/system" }
+frame-benchmarking = { path = "../../substrate/frame/benchmarking", default-features = false, optional = true }
 
 [dev-dependencies]
-sp-std = { version = "3.0.0", path = "../../substrate/primitives/std" }
-sp-core = { version = "3.0.0", path = "../../substrate/primitives/core" }
-sp-io = { version = "3.0.0", path = "../../substrate/primitives/io" }
-pallet-balances = { version = "3.0.0", path = "../../substrate/frame/balances" }
+sp-std = { path = "../../substrate/primitives/std" }
+sp-core = { path = "../../substrate/primitives/core" }
+sp-io = { path = "../../substrate/primitives/io" }
+pallet-balances = { path = "../../substrate/frame/balances" }
 
 [features]
 default = ["std"]
