--- a/pallets/storage/Cargo.toml
+++ b/pallets/storage/Cargo.toml
@@ -8,13 +8,13 @@ license = "Apache 2.0"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
-sp-std = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/std" }
-sp-core = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/core" }
-sp-runtime = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/runtime" }
-frame-support = { version = "3.0.0", default-features = false, path = "../../substrate/frame/support" }
-frame-system = { version = "3.0.0", default-features = false, path = "../../substrate/frame/system" }
-frame-benchmarking = { version = '3.1.0', path = '../../substrate/frame/benchmarking', default-features = false, optional = true }
+codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false }
+sp-std = { default-features = false, path = "../../substrate/primitives/std" }
+sp-core = { default-features = false, path = "../../substrate/primitives/core" }
+sp-runtime = { default-features = false, path = "../../substrate/primitives/runtime" }
+frame-support = { default-features = false, path = "../../substrate/frame/support" }
+frame-system = { default-features = false, path = "../../substrate/frame/system" }
+frame-benchmarking = { path = "../../substrate/frame/benchmarking", default-features = false, optional = true }
 log = { version = "0.4.14", default-features = false }
 base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
 webpki = { path = "../../vendors/webpki", default-features = false }
@@ -24,11 +24,11 @@ hex-literal = { version = "0.3.1", optional = true }
 
 [dev-dependencies]
 hex-literal = "0.3.1"
-sp-std = { version = "3.0.0", path = "../../substrate/primitives/std" }
-sp-core = { version = "3.0.0", path = "../../substrate/primitives/core" }
-sp-io = { version = "3.0.0", path = "../../substrate/primitives/io" }
-pallet-balances = { version = "3.0.0", path = "../../substrate/frame/balances" }
-pallet-timestamp = { version = "3.0.0", path = "../../substrate/frame/timestamp" }
+sp-std = { path = "../../substrate/primitives/std" }
+sp-core = { path = "../../substrate/primitives/core" }
+sp-io = { path = "../../substrate/primitives/io" }
+pallet-balances = { path = "../../substrate/frame/balances" }
+pallet-timestamp = { path = "../../substrate/frame/timestamp" }
 
 [features]
 default = ["std"]
