update github check workflow

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -16,14 +16,14 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'true'
-      - name: Install nightly
+      - name: Install rust toolchain
         id: rustup_toolchain
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
           override: true
           target: wasm32-unknown-unknown
-      - name: set env var
+      - name: Set env var
         run: |
           echo "home=${HOME}" >> $GITHUB_ENV
       - uses: actions/cache@v2
